# OpenGram

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
deploy/: Dockerfile
deploy/nginx/: default.conf  nginx.conf
src/: gunicorn.conf.py  manage.py
src/common/: mixins.py  models.py  views.py
src/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/post/: admin.py  apps.py  managers.py  models.py  permission.py  serializer.py  serializers.py  urls.py  views.py
src/post/migrations/: 0001_initial.py  0002_initial.py
src/user/: admin.py  apps.py  managers.py  models.py  urls.py
src/user/auth/: serializers.py  task.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_subscribers.py  0003_alter_subscribers_options_customuser_followers_and_more.py
src/user/profile/: serializers.py  urls.py  utils.py  views.py
